--- a/wp-content/themes/soboa95ans/style.css
+++ b/wp-content/themes/soboa95ans/style.css
@@ -67,7 +67,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
-	line-height: 1.15;
+	line-height             : 1.15;
 	-webkit-text-size-adjust: 100%;
 }
 
@@ -94,7 +94,7 @@ main {
  */
 h1 {
 	font-size: 2em;
-	margin: 0.67em 0;
+	margin   : 0.67em 0;
 }
 
 /* Grouping content
@@ -106,8 +106,8 @@ h1 {
  */
 hr {
 	box-sizing: content-box;
-	height: 0;
-	overflow: visible;
+	height    : 0;
+	overflow  : visible;
 }
 
 /**
@@ -116,7 +116,7 @@ hr {
  */
 pre {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size  : 1em;
 }
 
 /* Text-level semantics
@@ -134,7 +134,7 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-	border-bottom: none;
+	border-bottom  : none;
 	text-decoration: underline;
 	text-decoration: underline dotted;
 }
@@ -155,7 +155,7 @@ code,
 kbd,
 samp {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size  : 1em;
 }
 
 /**
@@ -171,9 +171,9 @@ small {
  */
 sub,
 sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
+	font-size     : 75%;
+	line-height   : 0;
+	position      : relative;
 	vertical-align: baseline;
 }
 
@@ -208,9 +208,9 @@ optgroup,
 select,
 textarea {
 	font-family: inherit;
-	font-size: 100%;
+	font-size  : 100%;
 	line-height: 1.15;
-	margin: 0;
+	margin     : 0;
 }
 
 /**
@@ -249,7 +249,7 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
 	border-style: none;
-	padding: 0;
+	padding     : 0;
 }
 
 /**
@@ -276,11 +276,11 @@ fieldset {
  *		`fieldset` elements in all browsers.
  */
 legend {
-	box-sizing: border-box;
-	color: inherit;
-	display: table;
-	max-width: 100%;
-	padding: 0;
+	box-sizing : border-box;
+	color      : inherit;
+	display    : table;
+	max-width  : 100%;
+	padding    : 0;
 	white-space: normal;
 }
 
@@ -305,7 +305,7 @@ textarea {
 [type="checkbox"],
 [type="radio"] {
 	box-sizing: border-box;
-	padding: 0;
+	padding   : 0;
 }
 
 /**
@@ -322,7 +322,7 @@ textarea {
  */
 [type="search"] {
 	-webkit-appearance: textfield;
-	outline-offset: -2px;
+	outline-offset    : -2px;
 }
 
 /**
@@ -338,7 +338,7 @@ textarea {
  */
 ::-webkit-file-upload-button {
 	-webkit-appearance: button;
-	font: inherit;
+	font              : inherit;
 }
 
 /* Interactive
@@ -402,9 +402,9 @@ input,
 select,
 optgroup,
 textarea {
-	color: #404040;
+	color      : #404040;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	font-size: 1rem;
+	font-size  : 1rem;
 	line-height: 1.5;
 }
 
@@ -437,13 +437,13 @@ address {
 }
 
 pre {
-	background: #eee;
-	font-family: "Courier 10 Pitch", courier, monospace;
-	line-height: 1.6;
+	background   : #eee;
+	font-family  : "Courier 10 Pitch", courier, monospace;
+	line-height  : 1.6;
 	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
-	padding: 1.6em;
+	max-width    : 100%;
+	overflow     : auto;
+	padding      : 1.6em;
 }
 
 code,
@@ -456,12 +456,12 @@ var {
 abbr,
 acronym {
 	border-bottom: 1px dotted #666;
-	cursor: help;
+	cursor       : help;
 }
 
 mark,
 ins {
-	background: #fff9c0;
+	background     : #fff9c0;
 	text-decoration: none;
 }
 
@@ -477,9 +477,9 @@ body {
 
 hr {
 	background-color: #ccc;
-	border: 0;
-	height: 1px;
-	margin-bottom: 1.5em;
+	border          : 0;
+	height          : 1px;
+	margin-bottom   : 1.5em;
 }
 
 ul,
@@ -495,10 +495,10 @@ ol {
 	list-style: decimal;
 }
 
-li > ul,
-li > ol {
+li>ul,
+li>ol {
 	margin-bottom: 0;
-	margin-left: 1.5em;
+	margin-left  : 1.5em;
 }
 
 dt {
@@ -517,7 +517,7 @@ object {
 }
 
 img {
-	height: auto;
+	height   : auto;
 	max-width: 100%;
 }
 
@@ -527,7 +527,7 @@ figure {
 
 table {
 	margin: 0 0 1.5em;
-	width: 100%;
+	width : 100%;
 }
 
 /* Links
@@ -561,13 +561,13 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
+	border       : 1px solid;
+	border-color : #ccc #ccc #bbb;
 	border-radius: 3px;
-	background: #e6e6e6;
-	color: rgba(0, 0, 0, 0.8);
-	line-height: 1;
-	padding: 0.6em 1em 0.4em;
+	background   : #e6e6e6;
+	color        : rgba(0, 0, 0, 0.8);
+	line-height  : 1;
+	padding      : 0.6em 1em 0.4em;
 }
 
 button:hover,
@@ -604,10 +604,10 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: #666;
-	border: 1px solid #ccc;
+	color        : #666;
+	border       : 1px solid #ccc;
 	border-radius: 3px;
-	padding: 3px;
+	padding      : 3px;
 }
 
 input[type="text"]:focus,
@@ -649,42 +649,42 @@ textarea {
 --------------------------------------------- */
 .main-navigation {
 	display: block;
-	width: 100%;
+	width  : 100%;
 }
 
 .main-navigation ul {
-	display: none;
-	list-style: none;
-	margin: 0;
+	display     : none;
+	list-style  : none;
+	margin      : 0;
 	padding-left: 0;
 }
 
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	float: left;
-	position: absolute;
-	top: 100%;
-	left: -999em;
-	z-index: 99999;
+	float     : left;
+	position  : absolute;
+	top       : 100%;
+	left      : -999em;
+	z-index   : 99999;
 }
 
 .main-navigation ul ul ul {
 	left: -999em;
-	top: 0;
+	top : 0;
 }
 
-.main-navigation ul ul li:hover > ul,
-.main-navigation ul ul li.focus > ul {
+.main-navigation ul ul li:hover>ul,
+.main-navigation ul ul li.focus>ul {
 	display: block;
-	left: auto;
+	left   : auto;
 }
 
 .main-navigation ul ul a {
 	width: 200px;
 }
 
-.main-navigation ul li:hover > ul,
-.main-navigation ul li.focus > ul {
+.main-navigation ul li:hover>ul,
+.main-navigation ul li.focus>ul {
 	left: auto;
 }
 
@@ -693,7 +693,7 @@ textarea {
 }
 
 .main-navigation a {
-	display: block;
+	display        : block;
 	text-decoration: none;
 }
 
@@ -715,10 +715,8 @@ textarea {
 }
 
 .site-main .comment-navigation,
-.site-main
-.posts-navigation,
-.site-main
-.post-navigation {
+.site-main .posts-navigation,
+.site-main .post-navigation {
 	margin: 0 0 1.5em;
 }
 
@@ -738,7 +736,7 @@ textarea {
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
 	text-align: end;
-	flex: 1 0 50%;
+	flex      : 1 0 50%;
 }
 
 /* Posts and pages
@@ -763,7 +761,7 @@ textarea {
 }
 
 .page-links {
-	clear: both;
+	clear : both;
 	margin: 0 0 1.5em;
 }
 
@@ -792,10 +790,10 @@ textarea {
 .page-content .wp-smiley,
 .entry-content .wp-smiley,
 .comment-content .wp-smiley {
-	border: none;
+	border       : none;
 	margin-bottom: 0;
-	margin-top: 0;
-	padding: 0;
+	margin-top   : 0;
+	padding      : 0;
 }
 
 /* Make sure logo link wraps around logo image. */
@@ -807,12 +805,12 @@ textarea {
 --------------------------------------------- */
 .wp-caption {
 	margin-bottom: 1.5em;
-	max-width: 100%;
+	max-width    : 100%;
 }
 
 .wp-caption img[class*="wp-image-"] {
-	display: block;
-	margin-left: auto;
+	display     : block;
+	margin-left : auto;
 	margin-right: auto;
 }
 
@@ -828,14 +826,14 @@ textarea {
 --------------------------------------------- */
 .gallery {
 	margin-bottom: 1.5em;
-	display: grid;
-	grid-gap: 1.5em;
+	display      : grid;
+	grid-gap     : 1.5em;
 }
 
 .gallery-item {
-	display: inline-block;
+	display   : inline-block;
 	text-align: center;
-	width: 100%;
+	width     : 100%;
 }
 
 .gallery-columns-2 {
@@ -901,36 +899,36 @@ textarea {
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
-	border: 0;
-	clip: rect(1px, 1px, 1px, 1px);
+	border   : 0;
+	clip     : rect(1px, 1px, 1px, 1px);
 	clip-path: inset(50%);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute !important;
-	width: 1px;
+	height   : 1px;
+	margin   : -1px;
+	overflow : hidden;
+	padding  : 0;
+	position : absolute !important;
+	width    : 1px;
 	word-wrap: normal !important;
 }
 
 .screen-reader-text:focus {
 	background-color: #f1f1f1;
-	border-radius: 3px;
-	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-	clip: auto !important;
-	clip-path: none;
-	color: #21759b;
-	display: block;
-	font-size: 0.875rem;
-	font-weight: 700;
-	height: auto;
-	left: 5px;
-	line-height: normal;
-	padding: 15px 23px 14px;
-	text-decoration: none;
-	top: 5px;
-	width: auto;
-	z-index: 100000;
+	border-radius   : 3px;
+	box-shadow      : 0 0 2px 2px rgba(0, 0, 0, 0.6);
+	clip            : auto !important;
+	clip-path       : none;
+	color           : #21759b;
+	display         : block;
+	font-size       : 0.875rem;
+	font-weight     : 700;
+	height          : auto;
+	left            : 5px;
+	line-height     : normal;
+	padding         : 15px 23px 14px;
+	text-decoration : none;
+	top             : 5px;
+	width           : auto;
+	z-index         : 100000;
 }
 
 /* Do not show the outline on the skip link target. */
@@ -946,7 +944,7 @@ textarea {
 	float: left;
 
 	/*rtl:ignore*/
-	margin-right: 1.5em;
+	margin-right : 1.5em;
 	margin-bottom: 1.5em;
 }
 
@@ -956,14 +954,14 @@ textarea {
 	float: right;
 
 	/*rtl:ignore*/
-	margin-left: 1.5em;
+	margin-left  : 1.5em;
 	margin-bottom: 1.5em;
 }
 
 .aligncenter {
-	clear: both;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	clear        : both;
+	display      : block;
+	margin-left  : auto;
+	margin-right : auto;
 	margin-bottom: 1.5em;
 }
